# backend-core

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
backend_core/: asgi.py  settings.py  urls.py  wsgi.py
envs/local/backend-core/: backend-core.env
