[tool.poetry]
name = "backend-core"
version = "0.1.0"
description = ""
authors = ["Michał Wrona <wronamichal01@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_core"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"
psycopg2-binary = "^2.9.6"
drf-yasg = "^1.21.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
